--- a/.github/workflows/prepare-scratch-orgs.yaml
+++ b/.github/workflows/prepare-scratch-orgs.yaml
@@ -25,9 +25,14 @@ jobs:
 
     - name: Install Salesforce CLI
       run: |
-        npm install sfdx-cli
-        node_modules/sfdx-cli/bin/run --version
-        node_modules/sfdx-cli/bin/run plugins --core
+        wget https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
+        mkdir sfdx-cli
+        tar xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
+        ./sfdx-cli/install
+
+#        npm install sfdx-cli
+#        node_modules/sfdx-cli/bin/run --version
+#        node_modules/sfdx-cli/bin/run plugins --core
 
     - name: Install sfpowerscripts
       run: |
