--- a/.github/workflows/prepare-scratch-orgs.yaml
+++ b/.github/workflows/prepare-scratch-orgs.yaml
@@ -31,6 +31,13 @@ jobs:
         tar xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
         ./sfdx-cli/install
 
+    - name: Authenticate and set default DevHub
+      run: |
+        echo "${JWT_SIGNING_KEY}" > server.key
+        node_modules/sfdx-cli/bin/run force:auth:jwt:grant --clientid ${{ secrets.CONNECTED_APP_CONSUMER_KEY }} --jwtkeyfile server.key --username ${{ secrets.DEV_HUB_USERNAME}} --setdefaultdevhubusername -a devhub
+      env:
+      JWT_SIGNING_KEY: ${{ secrets.JWT_SIGNING_KEY }}
+      
     - name: Install sfpowerscripts
       run: |
         echo 'y' | sfdx plugins:install sfpowerkit
