--- a/.github/workflows/prepare-scratch-orgs.yaml
+++ b/.github/workflows/prepare-scratch-orgs.yaml
@@ -65,7 +65,7 @@ jobs:
 
     - name: Create pool with required number of orgs
       run: |
-        sfdx sfpowerscripts:orchestrator:prepare -f $CONFIG_FILE
+        sfdx sfpowerscripts:orchestrator:prepare --configfilepath=$CONFIG_FILE --targetdevhubusername=devhub
     
     - name: Check new contents of pool
       run: |
