--- a/scratchorg-poolconfig.json
+++ b/scratchorg-poolconfig.json
@@ -1,8 +1,9 @@
 {
     "pool": {
         "expiry": 2,
-        "tag":"CI_pool",
+        "tag":"Dev_pool",
         "max_allocation": 2,
-        "config_file_path": "config/project-scratch-def.json"
+        "config_file_path": "config/project-scratch-def.json",
+        "relax_all_ip_ranges": true
     }
 }
