--- a/.github/workflows/prepare-scratch-orgs.yaml
+++ b/.github/workflows/prepare-scratch-orgs.yaml
@@ -32,6 +32,7 @@ jobs:
       uses: actions/checkout@v2
 
     # Call a sub-action (from scripts subdirectory) to install DX
+    - uses: actions/checkout@v2
     - id: foo
       uses: ./.github/workflows/scripts/install-and-authenticate-dx@v1
       with:
