Removed description attribute

--- a/.github/workflows/prepare-scratch-orgs.yaml
+++ b/.github/workflows/prepare-scratch-orgs.yaml
@@ -1,8 +1,7 @@
 # Prepare scratch orgs
-# Create and deploy managed packages to orgs so that they're ready to use with sfpowerscripts 
+# Clears current developer pool and repopulates with freshly provisioned scratch orgs with key managed packages installed
 
 name: 'Prepare Scratch Orgs for Development'
-description: 'Clears current developer pool and repopulates with freshly provisioned scratch orgs with key managed packages installed'
 
 on:
   workflow_dispatch:
