--- a/.github/workflows/prepare-ci-pool.yaml
+++ b/.github/workflows/prepare-ci-pool.yaml
@@ -1,6 +1,6 @@
 # 
-# @description       : Retrieves an unused scratch org from the pool and emails login
-#                      details to the username specified
+# @description       : Clears current CI pool and repopulates with freshly provisioned
+#                      scratch orgs with key managed packages installed
 # @author            : Lawrence Newcombe
 #
 # Modifications Log 
@@ -8,21 +8,23 @@
 # 1.0   05-03-2020   Lawrence Newcombe  Initial Version
 # 
 
-name: Fetch a Scratch Org for Development
+name: Get a Scratch Org for Development
 
 on:
   workflow_dispatch:
     inputs:
-      dev_username:
-        description: 'Your username in production'
+      no_orgs_in_pool:
+        description: 'Number of scratch orgs to prepare in the pool'
         required: true
+        default: '5'
 
 env:
-  DEV_USERNAME: ${{ github.event.inputs.dev_username }}
+  USERNAME: ${{ github.event.inputs.no_orgs_in_pool }}
   JWT_SIGNING_KEY: ${{ secrets.JWT_SIGNING_KEY }}
   CONSUMER_KEY: ${{ secrets.CONNECTED_APP_CONSUMER_KEY }}
   DEV_HUB_USERNAME: ${{ secrets.DEV_HUB_USERNAME}}
-  POOL_NAME: 'Dev_pool'
+  POOL_NAME: 'CI_pool'
+  CONFIG_FILE: 'scratchorg-poolconfig.json'
 
 jobs:
   build:
@@ -48,28 +50,30 @@ jobs:
       run: |
         ls
 
-    # Call a sub-action (from scripts subdirectory) to install DX
-    - uses: actions/checkout@v2
-    - id: foo
-      uses: ./.github/workflows/scripts/install-and-authenticate-dx
-      with:
-        jwt-signing-key: ${{ secrets.JWT_SIGNING_KEY }}
-        consumer-key: ${{ secrets.CONNECTED_APP_CONSUMER_KEY }}
-        dev-hub-username: ${{ secrets.DEV_HUB_USERNAME}}
+    - name: Authenticate and set default DevHub
+      run: |
+        echo "${JWT_SIGNING_KEY}" > server.key
+        sfdx force:auth:jwt:grant --clientid $CONSUMER_KEY --jwtkeyfile server.key --username $DEV_HUB_USERNAME --setdefaultdevhubusername -a devhub
 
-    # Install SFPowerKit SFDX extension https://github.com/Accenture/sfpowerkit
-    - name: Install sfpowerkit
+    - name: Install sfpowerscripts
       run: |
         echo 'y' | sfdx plugins:install sfpowerkit
+        echo 'y' | sfdx plugins:install sfdmu
+        echo 'y' | sfdx plugins:install @dxatscale/sfpowerscripts
 
     - name: Check current contents of pool
       run: |
-        sfdx sfpowerkit:pool:list --tag=$POOL_NAME --allscratchorgs
+        sfdx sfpowerscripts:pool:list -t $POOL_NAME
 
-    - name: Fetch an org from the pool
+    - name: Remove any orgs already in pool
       run: |
-        sfdx sfpowerkit:pool:fetch --tag=$POOL_NAME -s $DEV_USERNAME
+        sfdx sfpowerscripts:pool:delete -t $POOL_NAME
+        echo "Cleared scratch org pool $POOL_NAME"
 
+    - name: Create pool with required number of orgs
+      run: |
+        sfdx sfpowerscripts:orchestrator:prepare -f $CONFIG_FILE
+    
     - name: Check new contents of pool
       run: |
-        sfdx sfpowerkit:pool:list --tag=$POOL_NAME --allscratchorgs
+        sfdx sfpowerscripts:pool:list -t $POOL_NAME
