--- a/.github/workflows/prepare-ci-pool.yaml
+++ b/.github/workflows/prepare-ci-pool.yaml
@@ -8,7 +8,7 @@
 # 1.0   05-03-2020   Lawrence Newcombe  Initial Version
 # 
 
-name: Get a Scratch Org for Development
+name: Prepare CI Pool
 
 on:
   workflow_dispatch:
@@ -16,15 +16,14 @@ on:
       no_orgs_in_pool:
         description: 'Number of scratch orgs to prepare in the pool'
         required: true
-        default: '5'
+        default: '2'
 
 env:
-  USERNAME: ${{ github.event.inputs.no_orgs_in_pool }}
   JWT_SIGNING_KEY: ${{ secrets.JWT_SIGNING_KEY }}
   CONSUMER_KEY: ${{ secrets.CONNECTED_APP_CONSUMER_KEY }}
   DEV_HUB_USERNAME: ${{ secrets.DEV_HUB_USERNAME}}
+  NO_ORGS_IN_POOL: ${{ github.event.inputs.no_orgs_in_pool }}
   POOL_NAME: 'CI_pool'
-  CONFIG_FILE: 'scratchorg-poolconfig.json'
 
 jobs:
   build:
@@ -34,27 +33,24 @@ jobs:
       with:
         node-version: '10.x'
 
-    # Command below is taken from approach in trailheadapps repo https://github.com/trailheadapps/automation-components/actions/runs/106422605/workflow
-    - name: Install Salesforce CLI
-      run: |
-        wget https://developer.salesforce.com/media/salesforce-cli/sfdx-linux-amd64.tar.xz
-        mkdir sfdx-cli
-        tar xJf sfdx-linux-amd64.tar.xz -C sfdx-cli --strip-components 1
-        ./sfdx-cli/install
-
-    # Checkout the code in the pull request
+    # Checkout so we have source code in working directory
     - name: 'Checkout source code'
       uses: actions/checkout@v2
 
-    - name: List directory
+    - name: List files
       run: |
         ls
 
-    - name: Authenticate and set default DevHub
-      run: |
-        echo "${JWT_SIGNING_KEY}" > server.key
-        sfdx force:auth:jwt:grant --clientid $CONSUMER_KEY --jwtkeyfile server.key --username $DEV_HUB_USERNAME --setdefaultdevhubusername -a devhub
+    # Call a sub-action (from scripts subdirectory) to install DX
+    - uses: actions/checkout@v2
+    - id: foo
+      uses: ./.github/workflows/scripts/install-and-authenticate-dx
+      with:
+        jwt-signing-key: ${{ secrets.JWT_SIGNING_KEY }}
+        consumer-key: ${{ secrets.CONNECTED_APP_CONSUMER_KEY }}
+        dev-hub-username: ${{ secrets.DEV_HUB_USERNAME}}
 
+    # Install SFPowerScripts SFDX extension https://dxatscale.gitbook.io/sfpowerscripts/ and related dependencies
     - name: Install sfpowerscripts
       run: |
         echo 'y' | sfdx plugins:install sfpowerkit
@@ -72,7 +68,7 @@ jobs:
 
     - name: Create pool with required number of orgs
       run: |
-        sfdx sfpowerscripts:orchestrator:prepare -f $CONFIG_FILE
+        sfdx sfpowerscripts:orchestrator:prepare -t $POOL_NAME -m $NO_ORGS_IN_POOL
     
     - name: Check new contents of pool
       run: |
