--- a/.github/workflows/validate-and-deploy-systest.yaml
+++ b/.github/workflows/validate-and-deploy-systest.yaml
@@ -56,23 +56,26 @@ jobs:
       run: |
         sfdx sfpowerscripts:pool:list -t $POOL_NAME
 
-    - name: Test deploy to scratch org
-      run:
-        sfdx force:source:push -u test-fol9ykalbgfr@example.com --ignorewarnings --json
+#    - name: Test deploy to scratch org
+#      run:
+#        sfdx force:source:push -u test-fol9ykalbgfr@example.com --ignorewarnings --json
 
-#    - name: Validate deployment of metadata and apex tests
-#      run: |
-#        sfdx sfpowerscripts:orchestrator:validate -f server.key -i $CONSUMER_KEY -p $POOL_NAME -u $DEV_HUB_USERNAME
+    - name: Validate deployment of metadata and apex tests
+      run: |
+        sfdx sfpowerscripts:orchestrator:validate -f server.key -i $CONSUMER_KEY -p $POOL_NAME -u $DEV_HUB_USERNAME
 
     - name: Build packages to install
+      if: ${{ always() }}
       run: |
         sfdx sfpowerscripts:orchestrator:build
 
     - name: Authenticate to sandbox
+      if: ${{ always() }}
       run: |
         sfdx force:auth:jwt:grant --clientid $CONSUMER_KEY --jwtkeyfile server.key --username $USERNAME_SYSTEST -a "Systest"
 
     - name: Install packages to sandbox
+      if: ${{ always() }}
       run: |
         sfdx sfpowerscripts:orchestrator:deploy -u Systest
 
